--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 	<meta name="description" content="Word Tally is a browser-based word counter.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+	<link rel="stylesheet" href="../dist/assets/css/critical-css.css" media="screen" inline>
 	<link rel="stylesheet" href="assets/css/word-tally.min.css" media="screen" charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,700" rel="stylesheet">
+
+	<link rel="icon" type="image/png" href="favicon.ico?ver=1.0">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
 <body>
 
@@ -28,9 +32,9 @@
 				<button type="button" id="run_it" name="button">Count</button>
 			</div>
 
-			<footer class="tools-details">
+			<footer class="primary-footer">
 				<div class="">
-					<button class="reset" type="button">esc</button> to clear
+					<button type="button" class="reset button--esc">esc</button> to clear
 				</div>
 				<div class="">
 					<button type="button" class="download-csv">Download CSV</button>
@@ -41,7 +45,7 @@
 
 		<div class="side return">
 
-			<ul class="totals">
+			<ul class="metrics">
 				<li>
 					<span>Total Words</span>
 					<span id="total_words"></span>
