move stylesheets to body -- blocking script workaround

--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="../dist/assets/css/critical-css.css" media="screen" inline>
-	<link rel="stylesheet" href="assets/css/word-tally.min.css" media="screen" charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,700" rel="stylesheet">
 
 	<link rel="icon" type="image/png" href="favicon.ico?ver=1.0">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
 <body>
+
+	<link rel="stylesheet" href="assets/css/word-tally.min.css" media="screen" charset="utf-8"><script> </script>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:400,700" rel="stylesheet">
 
 	<main>
 
